<resources>
    <string name="app_name">Receteo</string>
    <string name="recipe_list_title">Lista de recetas</string>
    <string name="add_recipe_title">Añadir receta</string>
    <string name="recipe_name">Nombre de la receta</string>
    <string name="ingredients">Ingredientes</string>
    <string name="description">Descripción</string>
    <string name="select_chef">Selecciona un Chef</string>
    <string name="select_image">Seleccionar Imagen</string>
    <string name="save_recipe">Guardar Receta</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="share">Compartir</string>
    <string name="confirm_delete">¿Estás seguro de que deseas eliminar esta receta?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="back_to_login">Volver al Login</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="profile_picture">Imagen de perfil del usuario</string>
    <string name="user_name_label">Usuario:</string>
    <string name="user_email_label">Correo:</string>
    <string name="add_chef">Guardar Chef</string>
    <string name="chef_name">Nombre del Chef</string>
    <string name="nearby_restaurants">Restaurantes Cercanos</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="choose_gallery">Elegir de Galería</string>
    <string name="upload_image">Subir Imagen</string>
    <string name="chef_create_hint_name">Nombre del Chef</string>
    <string name="chef_create_button_save">Guardar Chef</string>
    <string name="recipe_create_hint_name">Nombre de la receta</string>
    <string name="recipe_create_hint_ingredients">Ingredientes</string>
    <string name="recipe_create_hint_description">Descripción</string>
    <string name="recipe_create_select_chef">Selecciona un Chef</string>
    <string name="recipe_create_select_image">Seleccionar Imagen</string>
    <string name="recipe_create_save_button">Guardar Receta</string>
    <string name="login_logo_content_description">Logo de la app</string>
    <string name="login_hint_email">Correo Electrónico</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="login_register_button">Registrarse</string>
    <string name="recipe_detail_toolbar_title">Detalle de Receta</string>
    <string name="recipe_detail_image_description">Imagen de la receta</string>
    <string name="recipe_detail_title">Título de la receta</string>
    <string name="recipe_detail_ingredients">Ingredientes</string>
    <string name="recipe_detail_description">Descripción</string>
    <string name="register_logo_content_description">Logo de la app</string>
    <string name="register_hint_username">Usuario</string>
    <string name="register_hint_email">Correo Electrónico</string>
    <string name="register_hint_password">Contraseña</string>
    <string name="register_button">Registrar</string>
    <string name="register_back_to_login">Volver al Login</string>

    <string name="user_profile_image_description">Imagen de perfil del usuario</string>
    <string name="user_label_name">Usuario:</string>
    <string name="user_name_placeholder">Nombre del Usuario</string>
    <string name="user_label_email">Correo:</string>
    <string name="user_email_placeholder">Correo del Usuario</string>
    <string name="user_logout_button">Cerrar Sesión</string>
    <string name="chef_name_placeholder">Nombre del Chef</string>
    <string name="button_edit">Editar</string>
    <string name="button_delete">Eliminar</string>
    <string name="button_share">Compartir</string>
    <string name="recipe_image_content_description">Imagen de la receta</string>
    <string name="nav_recipes">Recetas</string>
    <string name="nav_chefs">Cocineros</string>
    <string name="nav_map">Mapa</string>
    <string name="nav_user">Usuario</string>

</resources>
